--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-contact-form",
-  "homepage": "https://myusername.github.io/my-app",
+  "homepage": "https://myusername.github.io/my-app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
