--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "react-contact-form",
-  "homepage": "https://myusername.github.io/my-app/",
+  "homepage": "https://mshuber1981.github.io/react-contact-form/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
-    "bootstrap": "^4.5.3",
-    "gh-pages": "^3.1.0",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1"
+    "bootstrap": "^5.1.3",
+    "gh-pages": "^4.0.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.5"
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
