--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^6.0.0",
     "react-scripts": "^5.0.1"
   },
