--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
+    "sass": "^1.77.6",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
